[package]
name = "vmux_ftp"
version = "0.1.0"
edition = "2021"
workspace = ".."


[dependencies]
vmux_lib = { path = "../vmux_lib" }
bluray_support = { path = "../bluray_support" }#egui = "0.18.1"
##libunftp = "0.18.5"
#libunftp = { path = "../libunftp" }
#tokio = { version = "1", features = ["full"] }
#async-trait = "*"
#slog = "*"
#slog-term = "*"


[lib]
name = "libvmuxftp"
path = "src/lib.rs"

[[bin]]
name = "vmux_ftp"
path = "src/main.rs"
