[package]
name = "vmux_lib"
version = "0.1.0"
edition = "2021"
workspace = ".."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluray_support = { path = "../bluray_support" }
ffms2 = { path = "../ffms2_patched" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simple-error = "0.2.3"
y4m = "0.7.0"
byteorder = "1.4.3"
home = "0.5.3"
rmp-serde = "1.1.0"
flate2 = "1.0"
base64 = "0.13.0"