[package]
name = "vmux_lib"
version = "0.1.0"
edition = "2021"
workspace = ".."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluray_support = { path = "../bluray_support" }
ffms2 = { git = "https://github.com/sshiroi/ffms2-rs", rev="d574c825c4c0eb9c6516d4884b47f7316c23e2e2" }
#if you have dolby vision compile problems use this rev cf3283ac7bd35eca16ad27840758e67cdb3ba072
#d574c825c4c0eb9c6516d4884b47f7316c23e2e2 audio fix only
#cf3283ac7bd35eca16ad27840758e67cdb3ba072 audio fix + dv fix
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simple-error = "0.2.3"
y4m = "0.7.0"
byteorder = "1.4.3"
home = "0.5.3"
rmp-serde = "1.1.0"
flate2 = "1.0"
base64 = "0.13.0"